--- a/themes/tiansky/layout/_partial/head.ejs
+++ b/themes/tiansky/layout/_partial/head.ejs
@@ -19,26 +19,32 @@
     %>
 
     <title><%= title.join(' | ') %></title>
-    <% if (config.author){ %><meta name="author" content="<%= config.author %>"><% } %>
-    <% if (page.description){ %>
-    <meta name="description" content="<%= page.description %>">
-    <% } else if (config.description){ %>
-    <meta name="description" content="<%= config.description %>">
-    <% } else if (page.excerpt){ %>
-    <meta name="description" content="<%= strip_html(page.excerpt).replace(/^\s*/, '').replace(/\s*$/, '') %>">
-    <% } else if (page.content){ %>
-    <meta name="description" content="<%= strip_html(page.content).replace(/^\s*/, '').replace(/\s*$/, '').substring(0, 150) %>">
+    <% if (config.author){ %>
+        <meta name="author" content="<%= config.author %>">
     <% } %>
-    <% if (page.keywords){ %><meta name="keywords" content="<%= page.keywords %>"><% } %>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <% if (page.description){ %>
+        <meta name="description" content="<%= page.description %>">
+    <% } else if (config.description){ %>
+        <meta name="description" content="<%= config.description %>">
+    <% } else if (page.excerpt){ %>
+        <meta name="description" content="<%= strip_html(page.excerpt).replace(/^\s*/, '').replace(/\s*$/, '') %>">
+    <% } else if (page.content){ %>
+        <meta name="description" content="<%= strip_html(page.content).replace(/^\s*/, '').replace(/\s*$/, '').substring(0, 150) %>">
+    <% } %>
+    <% if (page.keywords){ %>
+        <meta name="keywords" content="<%= page.keywords %>">
+    <% } %>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-    <% if (page.title){ %><meta property="og:title" content="<%= page.title %>"/><% } %>
+    <% if (page.title){ %>
+        <meta property="og:title" content="<%= page.title %>"/>
+    <% } %>
     <meta property="og:site_name" content="<%= config.title %>"/>
 
     <% if(page.cover) { %>
-    <meta property="og:image" content="<%= page.cover %>" />
+        <meta property="og:image" content="<%= page.cover %>" />
     <% } else { %>
-    <meta property="og:image" content="<%= config.cover %>"/>
+        <meta property="og:image" content="<%= config.cover %>"/>
     <% } %>
 
     <link rel="icon" type="image/png" href="<%- config.root %>favicon.png">
