--- a/themes/tiansky/layout/_partial/footer.ejs
+++ b/themes/tiansky/layout/_partial/footer.ejs
@@ -28,7 +28,7 @@
     <div class="footer-copyright <%= theme.color.link %>-link-context">
         <div class="container">
             <%= theme.copyright %>
-            <p class="right" style="margin-top: 0;"><%= __('powered.first') %> <a href="https://hexo.io">Hexo</a>sm"></p>
+            <p class="right" style="margin-top: 0;"><%= __('powered.first') %> <a href="https://hexo.io">Hexo</a><%= __('powered.last') %></p>
         </div>
     </div>
 </footer>
