--- a/themes/tiansky/layout/_partial/plugin/comment.ejs
+++ b/themes/tiansky/layout/_partial/plugin/comment.ejs
@@ -24,31 +24,31 @@ var pageTitle = page.title;
             <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a>
         </noscript>
     </section>
-<% } else if (theme.duoshuo_shortname && page.comments){ %>
+<% } else if (theme.sohucy_shortname && page.comments){ %>
+    <!--PC和WAP自适应版-->
     <section id="comment">
-        <div class="card">
-            <div class="card-content">
-                <!-- Duoshuo Comment BEGIN -->
-                <div class="ds-thread" data-thread-key="<%= pageId %>" data-title="<%= pageTitle %>" data-url="<%= pageUrl %>"></div>
-
-                <script type="text/javascript">
-                    console.log(document.querySelector('.ds-thread'));
-                    var duoshuoQuery = {
-                        short_name: '<%= theme.duoshuo_shortname %>'
-                    };
-                    (function() {
-                        var ds = document.createElement('script');
-                        ds.type = 'text/javascript';
-                        ds.async = true;
-                        ds.src = (document.location.protocol == 'https:'
-                            ? 'https:'
-                            : 'http:') + '//static.duoshuo.com/embed.js';
-                        ds.charset = 'UTF-8';
-                        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(ds);
-                    })();
-                </script>
-                <!-- Duoshuo Comment END -->
-            </div>
-        </div>
+      <div id="SOHUCS" sid="<%= page.path %>" ></div>
+      <script type="text/javascript">
+        (function(){
+          var appid = 'cyt9jasca';
+          var conf = 'prod_0db806c843b4857ef060216fc3bd4ff2';
+          var width = window.innerWidth || document.documentElement.clientWidth;
+          if (width < 960) {
+            window.document.write('<script id="changyan_mobile_js" charset="utf-8" type="text/javascript" src="https://changyan.sohu.com/upload/mobile/wap-js/changyan_mobile.js?client_id=' + appid + '&conf=' + conf + '"><\/script>');
+          } else {
+            var loadJs=function(d,a){
+              var c=document.getElementsByTagName("head")[0]||document.head||document.documentElement;
+              var b=document.createElement("script");
+              b.setAttribute("type","text/javascript");
+              b.setAttribute("charset","UTF-8");
+              b.setAttribute("src",d);
+              if(typeof a==="function"){
+                if(window.attachEvent){
+                  b.onreadystatechange=function(){
+                    var e=b.readyState;
+                    if(e==="loaded"||e==="complete"){
+                      b.onreadystatechange=null;
+                      a()}}}else{b.onload=a}}c.appendChild(b)};loadJs("https://changyan.sohu.com/upload/changyan.js",function(){window.changyan.api.config({appid:appid,conf:conf})}); } })();
+        </script>
     </section>
 <% } %>
